backport to jdk8.